remove -Xverify:none Closes #1873 (#1934)
remove -Xverify:none