@@ -69,7 +69,7 @@ class TomcatRunConfigurationWrapperForIdeaUltimate: RunConfigurationWrapper {
             digmaExtensionPath = FileUtils.convertWinToWslPath(digmaExtensionPath)
         }
 
-        var retVal = "-Xverify:none "
+        var retVal = " "
         retVal = retVal
             .plus("-javaagent:$otelAgentPath")
             .plus(" ")
